# sledge

./: # 2 - build sledgelib.bat  .gitignore  .gitmodules  CMakeLists.txt  Create project.bat  README.md  appveyor.yml  build.bat  mod.ps1  premake5.lua
resources/: launcher_resources.rc
scripts/: Create mod project.ps1  mod.ps1  oculus_bindings.json  patchproj.ps1  sledge.runtimeconfig.json  sledge_actionmanifest.json
source/dumper/: dllmain.cpp  dumper.cpp  dumper.h  dumper.vcxproj  dumper.vcxproj.filters  premake5.lua  signatures.h
source/launcher/: main.cpp  steam.cpp  steam.h  teardown.cpp  teardown.h
source/launcher/util/: pe.cpp  wininternals.h
source/loader/: game.cpp  game.h  globals.h  loader.h  main.cpp  menu.cpp  menustyle.h  teardown.cpp  tinyjson.h  window.cpp  window.h
source/loader/game/: steam.cpp  steam.h  teardown.cpp
source/loader/misc/: peloader.cpp  peloader.h
source/loader/ui/: menu.cpp  menu.h  window.cpp  window.h
source/loader/util/: pe.cpp  pe.h
source/shared/util/: log.cpp  log.h  memory.cpp  memory.h  resources.cpp  resources.h  timer.h
source/sledge/: dllmain.cpp  globals.h  net.h  sledgelib.h
source/sledge/misc/: nethost.cpp
source/sledge/net/: net.cpp
source/sledge/sledge/: hooks.h  loader.cpp  loader.h  ui.h
source/sledge/sledge/hooks/: createwindow.cpp  swapbuffers.cpp  wndproc.cpp
source/sledge/sledge/misc/: binds.cpp  binds.h  nethost.cpp  nethost.h  steam.cpp  steam.h
source/sledge/sledge/ui/: GPUContext.cpp  GPUContext.h  GPUDriver.cpp  GPUDriver.h  GPUDriverImpl.cpp  GPUDriverImpl.h  gpudriver.cpp  gpudriver.h  gpudriverimpl.h  ui.cpp  webcontainer.cpp  webcontainer.h
source/sledge/sledge/ui/gpu/: GPUDriver.cpp  GPUDriver.h  GPUDriverImpl.cpp  GPUDriverImpl.h
source/sledge/sledge/ui/shaders/: shader_fill_frag.h  shader_fill_path_frag.h  shader_v2f_c4f_t2f_t2f_d28f_vert.h  shader_v2f_c4f_t2f_vert.h
source/sledge/sledgelib/: netfuncs.h  sledgelib.cpp
source/sledge/sledgelib/netfuncs/: binds.cpp  body.cpp  callbacks.cpp  entity.cpp  game.cpp  misc.cpp  netui.cpp  player.cpp  registry.cpp  scene.cpp  shape.cpp  tags.cpp  teardown.cpp
source/sledge/teardown/: callbacks.h  functions.cpp  functions.h  hooks.h  signatures.h  small_string.h  small_vector.h  utils.cpp  utils.h
source/sledge/teardown/callbacks/: playerspawn.cpp  playerupdate.cpp  postupdate.cpp  preupdate.cpp  statechange.cpp  tick.cpp  update.cpp
source/sledge/teardown/classes/: entities.h  game.h  misc.h  player.h  scene.h  script.h
source/sledge/teardown/functions/: constructors.h  entity.h  memory.h  misc.h  registry.h  tags.h
source/sledge/teardown/hooks/: activewindowhook.cpp  applydisplayhook.cpp  callbackhooks.cpp  cursorhook.cpp  gamehook.cpp  loghook.cpp
source/sledge/util/: keycodes.h  math.h  memory.cpp
source/sledge_core/: dllmain.cpp  globals.h
source/sledge_core/net/: nethost.cpp  nethost.h  sledgelib.cpp  sledgelib.h
source/sledge_core/net/functions/: body.cpp  entity.cpp  game.cpp  joint.cpp  lua.cpp  misc.cpp  player.cpp  registry.cpp  scene.cpp  shape.cpp  tags.cpp  vr.cpp
source/sledge_core/sledge/: loader.cpp  loader.h  luahelpers.cpp  luahelpers.h  vr.cpp  vr.h
source/sledge_core/teardown/: enums.h  functions.cpp  functions.h  hooks.h  offsets.h  utils.cpp  utils.h
source/sledge_core/teardown/classes/: body.h  entity.h  game.h  joint.h  player.h  renderer.h  scene.h  script.h  scriptcore.h  shape.h  vehicle.h
source/sledge_core/teardown/functions/: constructors.h  entity.h  lua.h  memory.h  misc.h  registry.h  scene.h  tags.h
source/sledge_core/teardown/hooks/: cursor.cpp  drawscene.cpp  gamecctor.cpp  levelchange.cpp  registerluafunctions.cpp  saves.cpp  swapbuffers.cpp  switchstate.cpp  update.cpp  updateplayer.cpp  updateshadowvolumes.cpp  updatetools.cpp  window.cpp  writetoconsole.cpp
source/sledge_core/teardown/types/: math.h  misc.h  rendertypes.h  small_string.h  small_vector.h
source/sledgelib/: Body.cs  KeyCodes.cs  Loader.cs  binds.cs  body.cs  callbackinvokers.cs  callbacks.cs  entity.cs  game.cs  infogen.cs  interfaces.cs  internalcallbacks.cs  loader.cs  log.cs  math.cs  misc.cs  modloader.cs  modmgr.cs  player.cs  registry.cs  scene.cs  shape.cs  shareddelegates.cs  sledgelib.cs  sledgelib.csproj  sledgelib.sln  tags.cs  ui.cs  utils.cs  webcontainer.cs
source/sledgelib/internal/: callbackinvokers.cs  delegates.cs  interfaces.cs  loader.cs  misc.cs  modmgr.cs
source/sledgelib/public/: game.cs  log.cs  lua.cs  math.cs  player.cs  scene.cs  tags.cs  vr.cs
source/sledgelib/public/entities/: body.cs  callbacks.cs  entity.cs  joint.cs  shape.cs
source/sledgelib/public/types/: enums.cs  math.cs  misc.cs
submodules/: CMakeLists.txt
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
